feat(case-4): transcribe B-memory-limit